# GridLaunch

./: Cargo.toml  README.md  package-lock.json  package.json
THIRD_PARTY_LICENSES/: partydeck_LICENSE.txt
scripts/: create_game_user.sh  delete_game_user.sh  install.sh
src/: common.rs  event_handler.rs  events.rs  game_handler.rs  game_instance.rs  gamepad.rs  gamepad_monitor.rs  ipc_handler.rs  kwin_window_handling.rs  launch.rs  lib.rs  main.rs  monitor.rs  remapper_thread.rs  spawner_thread.rs  user_profile.rs  utils.rs  wry_ui_helper.rs
src-ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.module.css  App.tsx  data.ts  index.css  types.ts
src-ui/src/components/: ConfirmBar.tsx  ConfirmGamebar.tsx  Confirmbar.module.css  Confirmbar.tsx  ControllerList.module.css  ControllerList.tsx  GameGrid.module.css  GameGrid.tsx  GamepadIcon.tsx  Hintbar.module.css  Hintbar.tsx  LaunchingOverlay.module.css  LaunchingOverlay.tsx  ProfileList.module.css  ProfileList.tsx  SidePicker.module.css  SidePicker.tsx  Sidebar.module.css  Sidebar.tsx  TopBar.module.css  TopBar.tsx
src/assets/: kwin_splitscreen.js  kwin_splitscreen_vertical.js  run_as_user_gaming.sh
src/events/: fromwebview_event.rs  gridlaunch_event.rs  towebview_event.rs  worker_event.rs
src/ui/: common.rs  handle_main_loop_event.rs  handle_window_event.rs  mod.rs  ui_loop_main.rs  window_builder.rs
src/wry_ui_helper/: common.rs  stop_signal.rs  wry_app_builder.rs  wry_app_handle_window_event.rs  wry_app_run.rs  wry_webview_app.rs  wry_window_builder.rs
(+8 files in other folders)
