[package]
name = "gridlaunch"
version = "0.1.0"
edition = "2024"

[dependencies]
evdev = "0.13.2"
nix = { version = "0.31.2", features = ["signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tao = "0.34.6"
udev = "0.9.3"
wry = "0.54.2"
x11rb = { version = "0.13.2", features = ["randr"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
